Fix the 403 Forbidden error for POST /api/auth/register and proactively detect and fix all related issues without breaking existing functionality